# instagram-dl-to-mega_instagrapi

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
src/instagram_dl_to_mega_instagrapi/: __main__.py  handle_exceptions.py  load_creds.py  login_to_instagram.py  login_to_mega.py  main.py  setup_logging.py  story_saver.py
